# rocketbase

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
admin-ui/: package-lock.json  package.json  vite.config.ts
src/: main.rs
src/model/: collection.rs  mod.rs
src/model/collection/: column_def.rs  column_type.rs  tests.rs
src/router/: mod.rs  static_files.rs
tests/: integration.rs
