[package]
name = "rocketbase"
version = "0.1.0"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
edition = "2021"

[lib]
name = "librocketbase"
path = "src/lib.rs"

[[bin]]
name = "rocketbase"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.25.0", features=["full"]}
sqlx = {version="0.6.2", features=["runtime-tokio-rustls", "postgres", "migrate", "chrono"]}
hyper = {version = "0.14.24", features=["client"]}
color-eyre = "0.6.2"
tracing-error = "0.2.0"
serde_json = "1.0.91"
serde = {version = "1.0.152", features=["derive"]}
config = {version = "0.13.3", features=["json"]}
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
axum = "0.6.4"
tower-http = {version="0.3.4", features=["trace", "cors"]}
tower = "0.4.13"
http = "0.2.8"
thiserror = "1.0.37"
chrono = {version = "0.4.23", features = ["serde"]}
include_dir = "0.7.3"
mime_guess = "2.0.4"
uuid = {version="1.3.0", features=["v4", "fast-rng", "serde"]}
tokio-stream = "0.1.11"

[profile.dev.package.backtrace]
opt-level = 3
